Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-110873

error: ‘QtWebEngineProcess’ was not declared in this scope; did you mean ‘QtWebEngineCore’?

    XMLWordPrintable

Details

    • 1f4fdb06b (dev), c5dfe4c94 (6.5)

    Description

      /home/qt/work/qt/qtwebengine/src/core/web_engine_library_info.cpp: In function ‘QString {anonymous}::subProcessPath()’:
      <command-line>: error: ‘QtWebEngineProcess’ was not declared in this scope; did you mean ‘QtWebEngineCore’?
      <command-line>: note: in definition of macro ‘QTWEBENGINEPROCESS_NAME’
      aAt global scope:
      cc1plus: note: unrecognized command-line option ‘-Wno-stringop-overread’ may have been intended to silence earlier diagnostics
      Sccache command failed, re-try calling build tool directly
      

      Build log: https://testresults.qt.io/logs/qt/qtwebengine/0f71069d70d427cd46dafca198945506144840e4/LinuxRHEL_8_4x86_64LinuxRHEL_8_4x86_64GCCqtci-linux-RHEL-8.4-x86_64-50-e668c9InstallQt5Dependencies_Sccache_UseConfigure/c9645c338fbf26bdf0402b498e585d3199d36e50/build_1682034272/log.txt.gz

      Details: https://testresults.qt.io/coin/integration/qt/qtwebengine/tasks/1682034250

      Tested changes (refs/builds/qtci/dev/1675314091):
      https://codereview.qt-project.org/c/qt/qtwebengine/+/453577/5 Retire the qt_parse_all_arguments
      https://codereview.qt-project.org/c/qt/qtwebengine/+/457864/2 Update dependencies on 'dev' in qt/qtwebengine

      Attachments

        Issue Links

          For Gerrit Dashboard: QTBUG-110873
          # Subject Branch Project Status CR V

          Activity

            People

              mrmsdbdl Amir Masoud Abdol
              janihe Jani Heikkinen
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes