Retire the qt_parse_all_arguments

To do so, we need to deal with the macros a bit differently, so here, I
replaced the macros with available utility functions, and added one for
the QTWEBENGINEPROCESS_NAME.

Fixes: QTBUG-110873
Task-number: QTBUG-99238
Change-Id: I29b41ffb8059511d2d93bfc01d40308aedaa8ad4
Reviewed-by: Michal Klocek <michal.klocek@qt.io>
(cherry picked from commit 1f4fdb06b13f0a9400f16313aad9296f019d2fc9)
Reviewed-by: Alexandru Croitor <alexandru.croitor@qt.io>